#86: Before removing test setup abstraction. (#87)